2004-01-13  Seiichi SATO  <ssato@sh.rim.or.jp>

	* tool/mlclient/main.c: arguments specified by -e option were able to
	estimate(e.g., mlclient -e w3m -v). fixed.
	(Thanks to Murano Naoki san for sending a patch)

2004-01-12  MINAMI Hirokazu  <minami@mistfall.net>

	* kiklib/src/kik_pty_streams.c: #defined _BSD_SOURCE to
	get rid of compile error on glibc.
	
2004-01-12  Tomohiro KUBOTA  <kubota@debian.org>

	* Include <string.h> in xwindow/x_sb_mode.c for usage of
	  strcmp().

2004-01-08  MINAMI Hirokazu  <minami@mistfall.net>

	* kiklib/src/kik_pty_streams.c: #defined _XOPEN_SOURCE as 500
	to make features defined in UNIX98 pty available.
	(should fix debian Bug#226654. Thanks to lamont for reporting)

2004-01-07  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_main_config.c: minor bugfix.
	* xwindow/x_font_manager.c: fixed segv when changing font size
	using escape sequence.

2004-01-06  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm/ml_vt100_parser.c: replaced magic constant "20" by DIGIT_STR_LEN(int).
	* xwindow/x_screen.c: mod_meta_mode = 8bit (set MSB) was not working. fixed.

2004-01-05  Seiichi SATO  <ssato@sh.rim.or.jp>

	* mlterm/ml_edit.c (cursor_goto_intern): If requested row is larger
	than terminal size, round it to end of row.

2004-01-03  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_main.config.c: type_engine was not initialized when
	no option had been specified. fixed.

	* xwindow/x_font_cache.c: "font_name_list" should not be accessed
	after realloc.

	* xwindow/x_window.c: #ifdef'ed not-yet-implemented features.

2003-12-30  Araki Ken  <arakiken@users.sf.net>

	* Core X Font Subsystem can be removed by --with-type-engines=xft.

2003-12-28  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_screen.c: reverted the last change.

2003-12-28  MINAMI Hirokazu  <minami@mistfall.net>

	* configure.in, configure: changed VERSION from 2.7.0->2.8.0
	* xwindow/x_screen.c: fixed segv (use_anti_alias should do nothing